finish core impl of players answering phase(backend + android), start hunter core impl of answering phase(backend)